fixed filter element text overlap bug

--- a/src/client/public/styles.css
+++ b/src/client/public/styles.css
@@ -139,7 +139,8 @@
   margin:0px;
   padding:0px;
   font-family: 'Helvetica Neue';
-  color: grey
+  color: grey;
+  white-space: nowrap;
 }
 
 .filterElement.selected {
